Fix width on iPhone/Android

--- a/base.css
+++ b/base.css
@@ -58,11 +58,11 @@
         padding: 0 10px;
     }
     #contents article {
-        width: 320px;
+        width: 300px;
     }
     #atnd1 dd,
     #atnd2 dd {
-        width: 180px;
+        width: 170px;
     }
     
     footer {
